--- a/Heatmapper/View/Base.lproj/IntervalTypeTableViewCell.xib
+++ b/Heatmapper/View/Base.lproj/IntervalTypeTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IntervalTypeTableViewCell" rowHeight="70" id="KGk-i7-Jjw" customClass="IntervalTypeTableViewCell" customModule="FIT" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IntervalTypeTableViewCell" rowHeight="70" id="KGk-i7-Jjw" customClass="IntervalTypeTableViewCell" customModule="Heatmapper" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="370" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -41,7 +41,7 @@
                                     <constraint firstAttribute="bottom" secondItem="qys-Hd-cug" secondAttribute="bottom" id="zAa-Cx-Eqp"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hfF-wB-iwM" customClass="ThemeView" customModule="FIT" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hfF-wB-iwM" customClass="ThemeView" customModule="Heatmapper" customModuleProvider="target">
                                 <rect key="frame" x="69" y="0.0" width="71" height="55"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vf3-t4-kBd" userLabel="Duration Value View">
@@ -57,7 +57,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total Duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ld4-4f-eF7" userLabel="Total Label" customClass="ThemeColumnHeaderUILabel" customModule="FIT" customModuleProvider="target">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total Duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ld4-4f-eF7" userLabel="Total Label" customClass="ThemeColumnHeaderUILabel" customModule="Heatmapper" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="71" height="55"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -82,7 +82,7 @@
                                     <constraint firstAttribute="width" constant="55" id="eVY-Nf-aSC"/>
                                 </constraints>
                             </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="3" translatesAutoresizingMaskIntoConstraints="NO" id="Hvi-4G-y0o" userLabel="HH:MM colon" customClass="ThemeColumnHeaderUILabel" customModule="FIT" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="3" translatesAutoresizingMaskIntoConstraints="NO" id="Hvi-4G-y0o" userLabel="HH:MM colon" customClass="ThemeColumnHeaderUILabel" customModule="Heatmapper" customModuleProvider="target">
                                 <rect key="frame" x="195" y="17.5" width="5" height="20.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="5" id="7dH-Dv-Xj8"/>
@@ -105,7 +105,7 @@
                                     <constraint firstAttribute="width" constant="55" id="j91-qE-36H"/>
                                 </constraints>
                             </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="3" translatesAutoresizingMaskIntoConstraints="NO" id="g29-ch-9in" userLabel="MM:SS colon" customClass="ThemeColumnHeaderUILabel" customModule="FIT" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="3" translatesAutoresizingMaskIntoConstraints="NO" id="g29-ch-9in" userLabel="MM:SS colon" customClass="ThemeColumnHeaderUILabel" customModule="Heatmapper" customModuleProvider="target">
                                 <rect key="frame" x="310" y="0.0" width="5" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="5" id="bwd-hy-PaR"/>
