--- a/Heatmapper WatchKit App/Base.lproj/Interface.storyboard
+++ b/Heatmapper WatchKit App/Base.lproj/Interface.storyboard
@@ -369,6 +369,16 @@
                                         </group>
                                         <group width="1" alignment="center" verticalAlignment="center" layout="vertical" radius="6" spacing="0.0" id="Y0W-Ml-Usi" userLabel="Middle Group">
                                             <items>
+                                                <label alignment="center" verticalAlignment="center" text="location" textAlignment="center" baselineAdjustment="alignCenters" id="Kv1-9H-zBN" userLabel="Location">
+                                                    <color key="textColor" name="navBarTitle"/>
+                                                    <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
+                                                    <variation key="device=watch38mm">
+                                                        <fontDescription key="font" style="UICTFontTextStyleCaption2"/>
+                                                    </variation>
+                                                    <variation key="device=watch40mm">
+                                                        <fontDescription key="font" style="UICTFontTextStyleCaption2"/>
+                                                    </variation>
+                                                </label>
                                                 <label alignment="center" verticalAlignment="center" text="0:00.0" baselineAdjustment="alignCenters" id="Rqb-y0-lxW" userLabel="Overall Duration">
                                                     <color key="textColor" name="navBarTint"/>
                                                     <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
@@ -393,6 +403,7 @@
                         <outlet property="currentPace" destination="yDY-jz-bfN" id="1Mq-Td-rhl"/>
                         <outlet property="distanceLabel" destination="REh-2f-xL5" id="Scr-IO-hnH"/>
                         <outlet property="heartRateLabel" destination="AAh-6d-Zvu" id="A8C-q4-Lqr"/>
+                        <outlet property="locationLabel" destination="Kv1-9H-zBN" id="HFC-Fd-tn3"/>
                         <outlet property="paceLabel" destination="C8l-vd-Q5H" id="J8b-Yh-R0P"/>
                         <outlet property="workoutDurationLabel" destination="Rqb-y0-lxW" id="slN-5O-BO8"/>
                     </connections>
