Map view added and working

--- a/Heatmapper/View/Base.lproj/Main.storyboard
+++ b/Heatmapper/View/Base.lproj/Main.storyboard
@@ -19,13 +19,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="lep-Yn-iYr">
-                                <rect key="frame" x="5" y="421" width="404" height="436"/>
+                                <rect key="frame" x="5" y="757" width="404" height="100"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hA5-ad-xJt" userLabel="Left Stack View">
-                                        <rect key="frame" x="0.0" y="0.0" width="198" height="436"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="198" height="100"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="YxN-xL-3iB" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="198" height="140"/>
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="YxN-xL-3iB" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="198" height="0.0"/>
                                                 <color key="backgroundColor" name="buttonPrimary"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -35,8 +35,8 @@
                                                     <action selector="btnRepeat:" destination="hJk-zi-pgB" eventType="touchUpInside" id="Ot5-Ot-9Ce"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="IJA-y3-LGF" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="148" width="198" height="140"/>
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="IJA-y3-LGF" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="198" height="0.0"/>
                                                 <color key="backgroundColor" name="buttonPrimary"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -46,8 +46,20 @@
                                                     <action selector="btnPyramid:" destination="hJk-zi-pgB" eventType="touchUpInside" id="jIW-wr-Ibc"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="GYq-I3-h60" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="296" width="198" height="140"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="HkC-uM-bXg" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="198" height="100"/>
+                                                <color key="backgroundColor" name="buttonPrimary"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                                <state key="normal" title="Start match"/>
+                                                <connections>
+                                                    <action selector="btnMatch:" destination="hJk-zi-pgB" eventType="touchUpInside" id="YdV-R2-M2g"/>
+                                                    <segue destination="cbs-Dv-Qaf" kind="show" identifier="mainMenuToMatch" id="rT7-Ok-iqp"/>
+                                                </connections>
+                                            </button>
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="GYq-I3-h60" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="198" height="0.0"/>
                                                 <color key="backgroundColor" name="buttonPrimary"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -60,10 +72,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="IXf-4o-Sgd" userLabel="Right Stack View">
-                                        <rect key="frame" x="206" y="0.0" width="198" height="436"/>
+                                        <rect key="frame" x="206" y="0.0" width="198" height="100"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="za3-ag-cd4" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="198" height="140"/>
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="za3-ag-cd4" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="198" height="0.0"/>
                                                 <color key="backgroundColor" name="buttonPrimary"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -73,8 +85,8 @@
                                                     <action selector="btnCustom:" destination="hJk-zi-pgB" eventType="touchUpInside" id="3mt-Of-oZX"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="Jmr-rQ-Lxp" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="148" width="198" height="140"/>
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="Jmr-rQ-Lxp" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="198" height="0.0"/>
                                                 <color key="backgroundColor" name="buttonPrimary"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -85,7 +97,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="k0e-af-gvr" customClass="ThemeButton" customModule="Heatmapper" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="296" width="198" height="140"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="198" height="100"/>
                                                 <color key="backgroundColor" name="buttonPrimary"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -99,7 +111,7 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="436" id="a8S-c8-xdU"/>
+                                    <constraint firstAttribute="height" constant="100" id="a8S-c8-xdU"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -116,6 +128,7 @@
                         <outlet property="autoDetectButton" destination="k0e-af-gvr" id="JAe-g7-5gF"/>
                         <outlet property="customButton" destination="za3-ag-cd4" id="eky-yz-FVn"/>
                         <outlet property="flatSetsButton" destination="YxN-xL-3iB" id="KWb-D5-egR"/>
+                        <outlet property="matchButton" destination="HkC-uM-bXg" id="t3D-DE-SdT"/>
                         <outlet property="pyramidSetsButton" destination="IJA-y3-LGF" id="YDR-iU-bhK"/>
                         <outlet property="randomButton" destination="Jmr-rQ-Lxp" id="eP2-9V-LNN"/>
                         <outlet property="tabataButton" destination="GYq-I3-h60" id="2BF-QP-9V1"/>
@@ -127,6 +140,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pbN-s5-nYY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="305" y="116"/>
+        </scene>
+        <!--Heatmap View Controller-->
+        <scene sceneID="mno-dC-kcX">
+            <objects>
+                <viewController id="cbs-Dv-Qaf" customClass="HeatmapViewController" customModule="Heatmapper" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qRr-WK-kdi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="oLg-e7-Xd0">
+                                <rect key="frame" x="0.0" y="88" width="414" height="674"/>
+                            </mapView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Yvo-ci-KWq"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Yvo-ci-KWq" firstAttribute="trailing" secondItem="oLg-e7-Xd0" secondAttribute="trailing" id="9Qm-ih-U6s"/>
+                            <constraint firstItem="Yvo-ci-KWq" firstAttribute="bottom" secondItem="oLg-e7-Xd0" secondAttribute="bottom" constant="100" id="Ief-3S-waE"/>
+                            <constraint firstItem="oLg-e7-Xd0" firstAttribute="top" secondItem="Yvo-ci-KWq" secondAttribute="top" id="Q5P-Y9-y35"/>
+                            <constraint firstItem="oLg-e7-Xd0" firstAttribute="leading" secondItem="Yvo-ci-KWq" secondAttribute="leading" id="qdH-2D-27L"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Mvf-si-GbH"/>
+                    <connections>
+                        <outlet property="mapView" destination="oLg-e7-Xd0" id="XDi-kd-WOY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hZ5-bu-aeX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-487" y="843"/>
         </scene>
         <!--Set Intervals-->
         <scene sceneID="TO0-5W-qsT">
@@ -818,7 +861,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="210" y="867.25352112676057"/>
+            <point key="canvasLocation" x="464" y="898"/>
         </scene>
         <!--Workout-->
         <scene sceneID="cjO-Me-1hS">
@@ -1208,7 +1251,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HA8-u1-0ZB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1121.7391304347827" y="608.70535714285711"/>
+            <point key="canvasLocation" x="1430" y="883"/>
         </scene>
         <!--Help-->
         <scene sceneID="DQ6-Bi-w9U">
